tests/errors/002-parsing/003-expected-expression/004-in-arguments-list/004-initial-assignment-to-declaration.xxx
x := (a : int = , b : int = 2) => () { }

// @TODO This should yield the same error.
// x := (a:int=, b:int=2) => () { }
